crates/lang/macro/tests/ui/contract/fail/constructor-missing-return.stderr
error: missing return for ink! constructor
  --> $DIR/constructor-missing-return.rs:10:13
   |
10 |         pub fn constructor() {}
   |             ^^^^^^^^^^^^^^^^
